project(myfiber)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_VERBOSE_MAKEFILE ON) 
include_directories(${myfiber_SOURCE_DIR})
#set(CMAKE_CXX_FLAGS "-lpthread")
SET(CMAKE_CXX_FLAGS -pthread)
#set(CMAKE_REQUIRED_LIBRARIES "pthread")
#add_subdirectory(${myfiber_SOURCE_DIR})
#set(SRC_LIST "main.cpp fiber_group.cpp fiber_control.cpp pthread_tools.cpp")
add_executable(main main.cpp fiber_group.cpp fiber_control.cpp pthread_tools.cpp)